--- a/html assignments/addmission form.html
+++ b/html assignments/addmission form.html
@@ -3,47 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Admission form</title>
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 20px;
-        background-color: white;
-      }
-      form {
-        max-width: 400px;
-        margin: auto;
-        background: burlywood;
-        padding: 20px;
-        border-radius: 8 px;
-        box-shadow: 0 0 10px rgb(0, 0, 0);
-      }
-      label {
-        display: block;
-        margin-bottom: 8 px;
-        font-weight: bold;
-      }
-      input,
-      select,
-      textarea {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 15px;
-        border: 1 px solid #ccc;
-        border-radius: 4px;
-      }
-      button {
-        background-color: blue;
-        color: white;
-        padding: 10px 15px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: #45a049;
-      }
-    </style>
+    <title>Addmission form</title>
+    <link rel="stylesheet" href="ad-form-style.css">
+
   </head>
   <body>
     <h2 style="text-align: center">Admission Form</h2>
