--- a/html assignments/project.html
+++ b/html assignments/project.html
@@ -3,20 +3,34 @@
 <head>
  <!-- <meta charset="UTF-8"> -->
   <!-- <meta name="viewport" content="width=, initial-scale=1.0"> -->
-  <title>Document</title>
-  <link rel="stylesheet" type="text\css" href="project-style.css">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="project-style.css">
 </head>
 <body>
-  <div id="div1">atharv</div>
-  <section
-    <div>
-      <div>
+   <!-- <div id="div1"> -->
+    <!-- <div id="div2"></div> -->
+  <!-- </div> -->
+  <!-- <p id="sample-para">"This seal of Shivaji, the son of Shahaji, shines for the welfare of all, growing in splendor like the new moon and revered by the world." -->
 
-      </div>
-    </div>
-    <div>
-      o
-    </div>
-  </section>
+    <!-- The inscription signifies that Shivaji Maharaj's reign will expand and be respected universally, much like the waxing crescent moon, and that his rule is dedicated to the well-being of his subjects. </p> -->
+  <!-- <div id ="logo-img-container"> -->
+  <!-- <span>text1</span> -->
+  <!-- <span>text2</span> -->
+  <!-- <div id ="div1">atharv</div> -->
+  <!-- <div id ="div2">shivam</div> -->
+<div id="container">
+  <div id="div1">
+    Div 1
+  </div>
+<div id ="div2">
+  Div 2
+  </div>
+  <div id="div3">
+    Div 3
+  </div> 
+</div>
+  <!-- <p>sample paragraph</p> -->
+  <!-- <p>sample paragraph</p> -->
+  <!-- <p>sample paragraph</p> -->
 </body>
 </html>
