--- a/html assignments/technovert.html
+++ b/html assignments/technovert.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technovert</title>
     <link rel="stylesheet" href="tech-style.css">
-    <body>
+
+<body>
     <section class="header">
         <div class="title ">
             <h1 class="m-0">TECHNOVERT</h1>
-        </head>
-        </div> 
+            </head>
+        </div>
         <!-- <nav>
        <div class = "nav">
         <ul class="p-0">
@@ -18,54 +20,58 @@
             <li class="d-inline"><a href="#services">Services</a></li>
             <li class="d-inline"><a href="#Careers">careers</a></li>
             <p>This text will be white</p> -->
-          <!-- </ul> --> 
-          <nav class="navbar">
+        <!-- </ul> -->
+        <nav class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-       </div>
+            </div>
     </section>
-    <section class ="news">
-        <div class ="d-inline-block">
-        <h1 class ="d-inline-block newshead"> NEWS </h1>
-        <ul class="news-file  d-inline-block">
-        <li>
-           Technovert is now microsoft partner in information security solution. 
-        </li>
-        <li>
-            we deliver one of the large book information stores in the world.
-        </li>
-        <li>
-            our team deliver the first window phone group at microsoft.
-        </li>
-        <li>
-            technovert parthner dummy with a statergy technology cto group.
-        </li>
-        </ul>
-    </div> 
+    <section class="news">
+        <div class="d-inline-block">
+            <h1 class="d-inline-block newshead"> NEWS </h1>
+            <ul class="news-file  d-inline-block">
+                <li>
+                    Technovert is now microsoft partner in information security solution.
+                </li>
+                <li>
+                    we deliver one of the large book information stores in the world.
+                </li>
+                <li>
+                    our team deliver the first window phone group at microsoft.
+                </li>
+                <li>
+                    technovert parthner dummy with a statergy technology cto group.
+                </li>
+            </ul>
+        </div>
     </section>
-    <p class="welcomeword">Welcome!</p>
-    <div>
+    <div class="description">
+        <p class="text-bold">Welcome!</p>
         <p>
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+            <br><br>
+            Dummy text is text that is used in the publishing industry or by web designers to occupy the space which
+            will later be filled with 'real' content. This is resquired when, for example, the final text is not yet
+            available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy
+            texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy
+            texts have been in use by typesetters since the 16th century.
+            <br><br>
+            Dummy text is text that is used in the publishing industry or by web designers to occupy the space which
+            will later be filled with 'real' content. This is required when, for example, the final text is not yet
+            available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy
+            texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy
+            texts have been in use by typesetters since the 16th century.
 
         </p>
     </div>
-    <div>
-        <p>
-            Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is resquired when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.
-
-
-        </p>
-    </div>   
-    <div>
-        <p>Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.
-
-        </p>
-    </div> 
 </body>
+
 </html>
