--- a/html assignments/technovert.html
+++ b/html assignments/technovert.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technovert</title>
     <link rel="stylesheet" href="tech-style.css">
-
 <body>
     <section class="header">
         <div class="title ">
@@ -23,20 +22,20 @@
             </div>
     </section>
     <section class="news">
-        <div class="d-inline-block">
-            <h1 class="d-inline-block newshead"> NEWS </h1>
-            <ul class="news-file  d-inline-block">
+        <div class="news-box d-inline-block">
+            <h1 class=""> NEWS </h1>
+            <ul class="news-content">
                 <li>
                     Technovert is now microsoft partner in information security solution.
                 </li>
                 <li>
-                    we deliver one of the large book information stores in the world.
+                    We deliver one of the large book information stores in the world.
                 </li>
                 <li>
-                    our team deliver the first window phone group at microsoft.
+                    Our team deliver the first window phone group at microsoft.
                 </li>
                 <li>
-                    technovert parthner dummy with a statergy technology cto group.
+                    Technovert parthner dummy with a statergy technology cto group.
                 </li>
             </ul>
         </div>
