--- a/html assignments/technovert.html
+++ b/html assignments/technovert.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technovert</title>
-    <link rel="stylesheet" href="tech-style.css">
+    <link rel="stylesheet " href="tech-style.css">
 <body>
     <section class="header">
         <div class="title ">
@@ -26,16 +26,16 @@
             <h1 class=""> NEWS </h1>
             <ul class="news-content">
                 <li>
-                    Technovert is now microsoft partner in information security solution.
+                   - Technovert is now microsoft partner in information security solution.
                 </li>
-                <li>
-                    We deliver one of the large book information stores in the world.
+                <li><br>
+                    - We deliver one of the large book information stores in the world.
                 </li>
-                <li>
-                    Our team deliver the first window phone group at microsoft.
+                <li><br>
+                    - Our team deliered the first Window 8 Metero style aplication for the window phone group at Microsoft.
                 </li>
-                <li>
-                    Technovert parthner dummy with a statergy technology cto group.
+                <li><br>
+                    - Technovert parthner dummy with a statergy technology CTO group.
                 </li>
             </ul>
         </div>
