--- a/html assignments/technovert/technovert.html
+++ b/html assignments/technovert/technovert.html
@@ -12,19 +12,22 @@
             <h1 class="m-0">TECHNOVERT</h1>
             </head>
         </div>
-        <nav class="navbar">
+        <nav class="navbar d-flex justify-content-between">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="blog-icon">
+                <img src="./blog-icon.png" alt="image not found">
             </div>
+        </nav>
     </section>
     <section class="news">
-        <div class="news-box d-inline-block">
-            <h1 class=""> NEWS </h1>
-            <ul class="news-content">
+        <div class="news-box news-word br d-inline-block">
+            <h1 class="to-uppercase"> NEWS </h1>
+            <ul class="news-content br">
                 <li>
                    - Technovert is now microsoft partner in information security solution.
                 </li>
@@ -41,7 +44,7 @@
         </div>
     </section>
     <div class="description">
-        <p class="text-bold">Welcome!</p>
+        <p class="text-bold description-greeting br">Welcome!</p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
