--- a/html assignments/technovert/technovert.html
+++ b/html assignments/technovert/technovert.html
@@ -25,9 +25,9 @@
         </nav>
     </section>
     <section class="news">
-        <div class="news-box news-word br d-inline-block">
+        <div class="news-box news-word  d-inline-block">
             <h1 class="to-uppercase"> NEWS </h1>
-            <ul class="news-content br">
+            <ul class="news-content ">
                 <li>
                    - Technovert is now microsoft partner in information security solution.
                 </li>
@@ -44,7 +44,7 @@
         </div>
     </section>
     <div class="description">
-        <p class="text-bold description-greeting br">Welcome!</p>
+        <p class="text-bold description-greeting ">Welcome!</p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
