--- a/html assignments/container.html
+++ b/html assignments/container.html
@@ -1,15 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Css/style.css" type="text/css">
+  <title>FTZ WORLD SERVICES</title>
+</head>
 
-  <title>
-
-  </title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-    <body>
-      <div id ="container">
-
+<body class="initial-body-setup p-m-0">
+  <div class="container">
+    <div class="quick-links-container">
+      <div class="quick-links">
+        <ul class="p-m-0">
+          <li class="ml-10"><a href="#">Request a Quote</a>
+            <div class="quick-links-seperator"></div>
+          </li>
+          <li class="ml-4"><a href="#">Client Login</a>
+            <div class="quick-links-seperator"></div>
+          </li>
+          <li class="ml-4"><a href="#">Vehicle Export Portal</a></li>
+        </ul>
       </div>
-    </body>
+    </div>
+    <header class="header-container">
+      <div class="header-style">
+        <div class="header-logo p-m-0">
+          <img src="Images/logo.png" alt="FTZ WORLD SERVICES" class="ftz-logo">
+        </div>
+        <nav class="header-nav p-m-0">
+          <ul class="p-m-0">
+            <li>
+              <a href="index.html" class="active">Home</a>
+              <span class="divider"></span>
+            </li>
+            <li>
+              <a href="about.html">About Ftzws</a>
+              <span class="divider"></span>
+            </li>
+            <li>
+              <a href="services.html">Our Services</a>
+              <span class="divider"></span>
+            </li>
+            <li>
+              <a href="dishes.html">Our Dishes</a>
+              <span class="divider"></span>
+            </li>
+            <li>
+              <a href="#">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="main-container">
+      <div class="quote-container to-upper-case">
+        <h4 class="p-m-0">Bringing Food <br> To your Door Step.</h4>
+      </div>
+      <div class="about-us-container">
+        <div class="about-us">
+          <div class="about-us-col">
+            <div class="image-container">
+              <img src="Images/tile1.png" alt="" class="tile tile1">
+            </div>
+            <div class="about">
+              <p>Dive into the vibrant world of vegetarian fast food, where every bite bursts with freshness and flavor!
+                Our menu features a variety of options, from crunchy veggie burgers to perfectly spiced wraps loaded
+                with fresh greens and hearty fillings. Indulge in crispy fries, cheesy pizzas topped with garden-fresh
+                vegetables, or wholesome grain bowls for a healthier twist. Each dish is prepared with high-quality,
+                fresh ingredients, ensuring every bite is as satisfying as the last.</p>
+              <div></div>
+              <p>We cater to your cravings with a mix of classic favorites and innovative vegetarian creations. Whether
+                you’re in the mood for a quick snack or a full meal, our veg fast food is guaranteed to delight. It’s
+                comfort food reimagined for the plant-based palate.</p>
+            </div>
+          </div>
+          <div class="about-us-col">
+            <div class="image-container">
+              <img src="Images/tile2.png" alt="" class="tile">
+            </div>
+            <div class="about">
+              <p>Indulge in the irresistible charm of non-veg fast food, crafted to satisfy your taste buds. From
+                tender, juicy chicken burgers to spicy, crispy wings, we have something for every meat lover. Our menu
+                is packed with hearty delights, including grilled kebabs, loaded sandwiches, and flavorful wraps. Each
+                dish is prepared with premium cuts of meat, marinated to perfection with rich, aromatic spices.</p>
+              <div></div>
+              <p>Craving seafood? Try our crispy fish fillets or prawn specials for a delightful twist. Whether you
+                prefer smoky BBQ flavors or fiery spice, our non-veg options cater to all palates. Pair your meal with
+                crispy fries, creamy dips, or refreshing drinks for the ultimate experience.</p>
+            </div>
+          </div>
+          <div class="about-us-col">
+            <div class="image-container">
+              <img src="Images/tile3.png" alt="" class="tile">
+            </div>
+            <div class="about">
+              <p>Take your taste buds on a culinary journey with our exquisite European food offerings. From the creamy
+                richness of Italian pasta to the hearty comfort of British pies, our menu brings the best of Europe to
+                your plate. Savor freshly baked French baguettes, buttery croissants, and gourmet cheese platters for a
+                taste of Parisian charm.</p>
+              <div></div>
+              <p> Indulge in Spanish tapas, German bratwurst, or Greek gyros, each dish capturing the essence of its
+                region. Our chefs use authentic recipes and premium ingredients to recreate the flavors of Europe.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="mt-8">
+      <p class="display-inline"> Copyright @ 2010 FTZ World Services. All rights reserved. </p>
+      <a href="#" class="display-inline ml-10">Contact Us </a>
+      <span class="divider footer-divider-style"></span>
+      <a href="#" class="display-inline">Request a Quote</a>
+    </footer>
+  </div>
+</body>
+
 </html>
+
+
+
+
